--- a/source/theme/index.handlebars
+++ b/source/theme/index.handlebars
@@ -6,11 +6,19 @@
 {{/each-limit}}
 </ul>
 
-
 <ul>
 {{#each index}}
 <li class='post'><a href="{{this.id}}.html">{{this.title}}</a> - {{this.human_date}}</li>
 {{/each}}
 </ul>
+
+{{#each-key categories }}
+    <h2 id="{{this.key}}">{{this.key}}</h2>
+    <ul>
+        {{#each this.value}}
+            <li class='post'><a href="{{this.id}}.html">{{this.title}}</a></li>
+        {{/each}}
+    </ul>
+{{/each-key}}
 
 {{> partials/footer }}
