--- a/source/theme/index.handlebars
+++ b/source/theme/index.handlebars
@@ -1,5 +1,7 @@
 {{> partials/header }}
 
+<a href="about.html">About</a>
+
 <ul>
 {{#each-limit index 1}}
 <li class='special post'><a href="{{this.id}}.html">{{this.title}}</a> - {{this.human_date}} - {{{this.html}}}</li>
